# High-Performance-Branchless-Tokenizer

./: CMakeLists.txt  README.md
include/: tokenizer.hpp
src/: main.cpp  tokenizer.cpp
